switch imports to use fork

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,6 @@ before_install:
   - if ! go get github.com/golang/tools/cmd/cover; then go get golang.org/x/tools/cmd/cover; fi
 script:
   - go test -race ./...
-  - go test -c -covermode=count -coverpkg=github.com/hexdigest/gowrap
+  - go test -c -covermode=count -coverpkg=github.com/gabstv/gowrap
   - ./gowrap.test -test.coverprofile coverage.cov
   - $HOME/gopath/bin/goveralls -service=travis-ci -coverprofile=coverage.cov
